--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "fsevents.js",
   "dependencies": {
     "nan": "^2.0.2",
-    "node-pre-gyp": "^0.6.14"
+    "pre-gyp-find": "^0.6.0"
   },
   "os": [
     "darwin"
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
-    "prepublish": "if [ $(npm -v | head -c 1) -lt 3 ]; then exit 1; fi && npm dedupe",
+    "prepublish": "if [ $(npm -v | head -c 1) -lt 3 ]; then exit 1; fi && npm i node-pre-gyp@^0.6.14 && npm dedupe",
+    "postinstall": "npm uninstall node-pre-gyp",
     "test": "tap ./test"
   },
   "binary": {
@@ -43,6 +44,7 @@
   ],
   "homepage": "https://github.com/strongloop/fsevents",
   "devDependencies": {
+    "node-pre-gyp": "^0.6.14",
     "tap": "~0.4.8"
   }
 }
